--- a/static/styles.css
+++ b/static/styles.css
@@ -340,3 +340,49 @@ body{
 
 
 }
+.search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    padding: 10px;
+    background-color: #f8f8f8;
+    border-radius: 25px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
+.search-bar input[type="search"] {
+    flex: 1;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px 0 0 25px;
+    outline: none;
+    font-size: 16px;
+    background-color: #fff;
+    transition: background-color 0.3s ease;
+}
+
+.search-bar input[type="search"]:focus {
+    background-color: #f0f0f0;
+}
+
+.search-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
+    border: none;
+    border-radius: 0 25px 25px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.search-btn:hover {
+    background-color: #d1a159;
+}
+
+.search-btn img {
+    width: 38px;
+    height: auto;
+}
