correcciones menores de css y letrero

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -43,7 +43,7 @@
         <form  class="search-bar" method="POST" action="/predict" >
             <input type="text" id="user_input" name="user_input" placeholder="Ingresa una frase" required>
             <button class="search-btn"  type="submit" aria-label="Buscar">
-                <img src="/static/assets/lupa.svg">
+                Predecir
             </button>
         </form>
   
