--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f9fa;
@@ -137,17 +139,9 @@ footer {
     text-align: center;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body{
-    font-family: 'Poppins', sans-serif;
-}
+
 
 .menu{
     background-color: #342F2C;
@@ -219,7 +213,7 @@ body{
     bottom: 0;
     width: max-content;
     transform: translateY(100%);
-    background-color: #000;
+    background-color: #342F2C;
 }
 
 .menu__link--inside{
@@ -237,6 +231,8 @@ body{
     padding: 0 15px;
     cursor: pointer;
     display: none;
+    background-color: #342F2C;
+    
 }
 
 .menu__img{
@@ -271,7 +267,7 @@ body{
         top: 70px;
         bottom: 0;
         right: 0;
-        background-color: #000;
+        background-color: #342F2C;
         overflow-y: auto;
         display: grid;
         grid-auto-rows: max-content;
@@ -337,52 +333,4 @@ body{
     background-color: transparent;
     border: none; 
 
-
-
-}
-.search-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px;
-    padding: 10px;
-    background-color: #f8f8f8;
-    border-radius: 25px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-
-.search-bar input[type="search"] {
-    flex: 1;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 25px 0 0 25px;
-    outline: none;
-    font-size: 16px;
-    background-color: #fff;
-    transition: background-color 0.3s ease;
-}
-
-.search-bar input[type="search"]:focus {
-    background-color: #f0f0f0;
-}
-
-.search-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 15px;
-    border: none;
-    border-radius: 0 25px 25px 0;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.search-btn:hover {
-    background-color: #d1a159;
-}
-
-.search-btn img {
-    width: 38px;
-    height: auto;
 }
