modelo  2 de prediccion

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                             <a href="/predict" class="menu__link menu__link--inside">Primer modelo</a>
                         </li>
                         <li class="menu__inside">
-                            <a href="#" class="menu__link menu__link--inside">Segundo modelo</a>
+                            <a href="/predict2" class="menu__link menu__link--inside">Segundo modelo</a>
                         </li>
                     </ul>
                 </li>
