--- a/templates/predict2.html
+++ b/templates/predict2.html
@@ -51,6 +51,9 @@
             <div class="result">
                 <h2>Frase: {{ user_text }}</h2>
                 <h2>Sentimiento: {{ prediction }}</h2>
+                <h3>Factor 50: {{ factor_50 }}</h3>
+                <h3>Factor 30: {{ factor_30 }}</h3>
+                <h3>Factor 20: {{ factor_20 }}</h3>
             </div>
         </div>
     </main>
