--- a/templates/predict.html
+++ b/templates/predict.html
@@ -28,9 +28,11 @@
                 </li>
                 
                 <li class="menu__item">
-                    <a href="#" class="menu__link">Sobre Nosotros</a>
+                    <a href="/sobrenosotros" class="menu__link">Sobre Nosotros</a>
                 </li>
-                
+                <li class="menu__item">
+                    <a href="/Estudiosrelacionados" class="menu__link">Estudios Relacionados</a>
+                </li>
     
             </ul>
 
