--- a/templates/sobrenosotros.html
+++ b/templates/sobrenosotros.html
@@ -28,10 +28,10 @@
                 </li>
                 
                 <li class="menu__item">
-                    <a href="#" class="menu__link">Sobre Nosotros</a>
+                    <a href="/Sobrenosotros" class="menu__link">Sobre Nosotros</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#" class="menu__link">Estudios Relacionados</a>
+                    <a href="/Estudiosrelacionados" class="menu__link">Estudios Relacionados</a>
                 </li>
                 
     
@@ -45,7 +45,7 @@
     <div class="conteiner">
         <h1>hola mundo</h1>
     </div>
-   
     <script src="{{ url_for('static', filename='main.js') }}"></script>
+
 </body>
 </html>
