--- a/templates/predict2.html
+++ b/templates/predict2.html
@@ -31,7 +31,7 @@
                     <a href="/sobrenosotros" class="menu__link">Sobre Nosotros</a>
                 </li>
                 <li class="menu__item">
-                    <a href="/Estudiosrelacionados" class="menu__link">Estudios Relacionados</a>
+                    <a href="/estudiosrelacionados" class="menu__link">Estudios Relacionados</a>
                 </li>
     
             </ul>
