--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
                 </li>
                 
                 <li class="menu__item">
-                    <a href="#" class="menu__link">Sobre Nosotros</a>
+                    <a href="/sobrenosotros" class="menu__link">Sobre Nosotros</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#" class="menu__link">Estudios Relacionados</a>
+                    <a href="/estudiosrelacionados" class="menu__link">Estudios Relacionados</a>
                 </li>
                 
     
