--- a/templates/estudiosrelacionados.html
+++ b/templates/estudiosrelacionados.html
@@ -43,7 +43,7 @@
         </section>
     </nav>
     <div class="conteiner">
-        <h1>hola mundo</h1>
+        <iframe src="https://drive.google.com/file/d/1zx-vwC6HvJraE4UvbT7_nNYOmKz_p8Oc/preview" width="1200" height="480" allow="autoplay" display="block"></iframe>
     </div>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
 </body>
