--- a/templates/predict2.html
+++ b/templates/predict2.html
@@ -55,6 +55,7 @@
         </form>
   
         <div class="result-container">
+            <img src="/static/assets/magna.jpg">
             <div class="result">
                 <h2>Frase: {{ user_text }}</h2>
                 <h2>Sentimiento: {{ prediction }}</h2>
