--- a/templates/index.html
+++ b/templates/index.html
@@ -131,8 +131,14 @@
         <img src="/static/assets/tabla.jpg" >
         <img src="/static/assets/grafico1.jpeg" >
         <img src="/static/assets/grafico2.jpeg" >
+        <img src="/static/assets/grafico3.jpg" >
+        <p>En la tabla que se presenta a continuación, se muestra la suma de los porcentajes de representación de pesos entre factores de polaridad y factores emocionales para
+             las 31 emociones seleccionadas. Estas son las emociones más representativas en las redes sociales, según el dataset de los predecesores de este proyecto, 
+             que recopilaron 27,000 comentarios. Cada comentario fue interpretado manualmente y se le asignó una de las 281 emociones consideradas en ese momento. 
+             A partir de esta evaluación, se concluyó que las 31 emociones más repetidas, en función de la cantidad de veces que aparecieron, son las más representativas.</p>
         
-
+        <img src="/static/assets/grafico4.bmp" >
+        <p>Se puede concluir que la Autoconciencia emocional es la que más tiene representación en las 31 emociones.</p>
         
 
     </div>
