--- a/templates/index.html
+++ b/templates/index.html
@@ -132,14 +132,55 @@
         <img src="/static/assets/grafico1.jpeg" >
         <img src="/static/assets/grafico2.jpeg" >
         <img src="/static/assets/grafico3.jpg" >
-        <p>En la tabla que se presenta a continuación, se muestra la suma de los porcentajes de representación de pesos entre factores de polaridad y factores emocionales para
-             las 31 emociones seleccionadas. Estas son las emociones más representativas en las redes sociales, según el dataset de los predecesores de este proyecto, 
-             que recopilaron 27,000 comentarios. Cada comentario fue interpretado manualmente y se le asignó una de las 281 emociones consideradas en ese momento. 
-             A partir de esta evaluación, se concluyó que las 31 emociones más repetidas, en función de la cantidad de veces que aparecieron, son las más representativas.</p>
-        
-        <img src="/static/assets/grafico4.bmp" >
+        <h2>Relación de nuestro proyecto con el modelo IEom 2</h2>
+        <h3>Análisis haciendo uso de la matriz de pesos, donde se ponderan los porcentajes con los datos recolectados con nuestro modelo</h3>
+        <p>
+            A continuación, una tabla donde están las 31 emociones escogidas y sus respectivas ponderaciones en cuanto a capitales, ya sea emocional, relacional y sus subfactores (Véase pestaña de estudios relacionados):
+        </p>
+        <img src="/static/assets/etabla1.png" alt="Tabla1">
+        <p>
+            Y a continuación, una tabla en la cual se representa la cantidad de repeticiones de cada emoción, a través de la cual se creará un puntaje, Este puntaje se saca multiplicando los porcentajes de ponderación anterior por la cantidad de repeticiones de la emoción encontrados por nuestro modelo de aprendizaje automático, entrenado para calificar frases según las 31 emociones. Estos puntajes demuestran una representación de los capitales y sus subfactores según la cantidad de repeticiones, lo que servirá para saber las proporciones de representación de estos capitales en las redes sociales analizadas (Reddit y X).
+        </p>
+        <img src="/static/assets/etabla2.png" alt="Tabla2">
+        <h3>Graficos obtenidos</h3>
+        <img src="/static/assets/egraf1.png" alt="graf1">
+        <img src="/static/assets/egraf2.png" alt="graf2">
+        <img src="/static/assets/egraf3.png" alt="graf3">
+        <img src="/static/assets/egraf4.png" alt="graf4">
+        <img src="/static/assets/egraf5.png" alt="graf5">
+        <img src="/static/assets/egraf6.png" alt="graf6">
+        <h3>Conclusiones</h3>
+        <p>Estos resultados demuestran que en las redes sociales predomina el capital emocional, con un 61,2% de representación, frente al relacional, que tiene 38,8% de representación. También se puede concluir que Regulación social (30,4%), Auto reconocimiento (28%) y Auto regulación (33,3%), tienen valores muy parecidos de representación, lo que representa cierto equilibrio. Sin embargo, esta Reconocimiento, con 8,4% de representación, lo que puede significar que las emociones relacionadas con la capacidad de reconocer y entender las emociones de los demás son menos expresadas o valoradas en las interacciones en redes sociales. Esto podría indicar una tendencia hacia una mayor introspección y manejo de las propias emociones, en lugar de un enfoque en la empatía y la comprensión mutua.
+        </p>
+        <p>El predominio del capital emocional en las redes sociales refleja cómo los usuarios tienden a compartir y expresar más sus estados emocionales internos, lo cual puede estar relacionado con la naturaleza personal y a veces anónima de estas plataformas. Este fenómeno también resalta la importancia de las emociones en la construcción de la identidad digital y en la interacción con otros usuarios.
+        </p>
+        <p>Además, el equilibrio observado entre Regulación social, Auto reconocimiento y Auto regulación sugiere que las personas están igualmente enfocadas en cómo se manejan emocionalmente tanto en sus interacciones sociales como en su comprensión y control de sus propias emociones. Esta paridad puede indicar una conciencia creciente sobre la importancia de la inteligencia emocional en el ámbito digital.
+        </p>
+        <p>Por otro lado, la menor representación del Reconocimiento puede implicar la necesidad de fomentar más habilidades de empatía y comprensión emocional en los entornos digitales, promoviendo interacciones más humanas y conectadas. En resumen, estos resultados proporcionan una visión integral de cómo las emociones se manifiestan y se valoran en las redes sociales, subrayando tanto las fortalezas como las áreas que pueden beneficiarse de un mayor desarrollo y atención.
+        </p>
+        <p>Por último, haciendo un análisis al primer grafico donde se representan todos los subfactores, se destaca la poca representación de la autoestima, con 1,6% de representación, lo que puede ser indicativo de que los usuarios de redes sociales no suelen expresar directamente su autoestima o confianza en sí mismos en estas plataformas. Esta baja representación podría sugerir que los usuarios son más reacios a compartir aspectos positivos de su autoimagen, posiblemente debido a la percepción de que tales publicaciones podrían ser vistas como arrogantes o vanidosas.
+        </p>
+        <p>La poca representación de la autoestima en las redes sociales también puede reflejar una tendencia a enfocarse más en otras emociones, como la frustración, la ansiedad o la indignación, que tienden a generar más interacción y respuesta de otros usuarios. Esto puede crear un ciclo en el que las emociones negativas son más prominentes y reforzadas en las plataformas digitales.
+        </p>
+        <p>Además, la baja expresión de autoestima podría tener implicaciones sobre cómo las redes sociales afectan la salud mental y el bienestar de los usuarios. La falta de representación de autoestima podría estar correlacionada con problemas de autoconfianza y una mayor susceptibilidad a las influencias negativas de las redes sociales, como la comparación social y la crítica externa.
+
+        </p>
+        <p>En conjunto, estos hallazgos subrayan la complejidad del capital emocional en las redes sociales y la necesidad de fomentar un entorno digital más equilibrado y positivo. Promover la expresión de una gama más amplia de emociones, incluida la autoestima, podría contribuir a un uso más saludable y constructivo de las redes sociales, ayudando a los usuarios a construir una identidad digital más positiva y resiliente.
+        </p>
+        <h3>Análisis sin uso de los datos recolectados por nuestro modelo, solo análisis de los pesos de las 31 emociones consideradas, sin ponderación de repeticiones en nuestro modelo
+        </h3>
+        <p>En la tabla que se presenta a continuación, se muestra la suma de los porcentajes de representación de pesos entre factores de polaridad y factores emocionales para las 31 emociones seleccionadas. Estas son las emociones más representativas en las redes sociales, según el dataset de los predecesores de este proyecto, que recopilaron 27,000 comentarios. Cada comentario fue interpretado manualmente y se le asignó una de las 281 emociones consideradas en ese momento. A partir de esta evaluación, se concluyó que las 31 emociones más repetidas, en función de la cantidad de veces que aparecieron, son las más representativas.
+        </p>
+        <img src="/static/assets/etabla3.png" alt="tabla3">
+        <img src="/static/assets/etabla4.png" alt="Tabla4">
+        <p>Se puede concluir que la Autoconciencia emocional es la que más tiene representación en las 31 emociones.
+        </p>
+        <img src="/static/assets/etabla5.png" alt="Tabla5">
+        <p>Y en la siguiente tabla se pueden ver las distribuciones de pesos entre factores de polaridad y factores emocionales, pero de las 5 emociones que más representatividad tenían, (en los resultados de nuestro modelo predictivo) de las 31 emociones seleccionadas. Fueron omitidas las clasificaciones con ningún valor dentro de estas 5 emociones.
+
+        </p>
+        <img src="/static/assets/egraf7.png" alt="graf7">
         <p>Se puede concluir que la Autoconciencia emocional es la que más tiene representación en las 31 emociones.</p>
-        
 
     </div>
    
