--- a/templates/sobrenosotros.html
+++ b/templates/sobrenosotros.html
@@ -49,13 +49,12 @@
         <h2>Nuestro profesor</h2>
         <p>Leonardo Bravo Farías</p>
         <h2>Integrantes del proyecto</h2>
-    
-        <p>Benjamin Coronado - Jefe de proyecto </p>
-        <p>Sebastián Castro - Lider de Desarrollo </p>
         
+        <p>Benjamin Coronado - Jefe de proyecto </p>
+        <p>Yahnnis Aguilar - Lider de gestion de pesos emocionales y resultados</p>
+        <p>Sebastián Castro - Lider de Desarrollo </p>
         <p>Agustín Vilches - Desarrollador</p>
         <p>Robert Reyes - Desarrollador</p>
-        <p>Yahnnis Aguilar - Desarrolladora </p>
         <p>Jose Escobar - Desarrollador</p>
         <p>Marcos Cofré - Desarrollador</p>
         <p>Adolfo Alfaro - Desarrollador</p>
@@ -67,7 +66,7 @@
         <p>Marcos Cofré - Desarrollador</p>
         <p>Armando Galaz- Desarrollador</p>
         <p>Ricardo García- Desarrollador</p>
-
+        
         <p>Edgard Godoy - Lider de Investigación </p>
         <p>Guillermo Espinosa- Investigador</p>
         <p>Mauro Morgado- Investigador</p>
